fixes for tokens to wrap

--- a/ui/client-react/src/components/report/report.scss
+++ b/ui/client-react/src/components/report/report.scss
@@ -30,7 +30,7 @@
                 flex: 0 0 auto;
             }
             >.facetsMenuContainer {
-                flex: 1 0 auto;
+                flex: 1 1 auto;
             }
             >.recordsCount {
                 margin-left:5px;
